update cmake structure
try something similar to gtest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ set(EXT_PROJECTS_DIR ${PROJECT_SOURCE_DIR}/ext)
 # Our sources and includes
 ################################
 include_directories(inc)
-add_subdirectory(src)
+#add_subdirectory(src)
+link_directories(${spark_core_firmware_BINARY_DIR}/src)
+add_library(spark_wiring src/spark_wiring_all.cpp)
 
 ################################
 # Normal Libraries & Executables
